--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -681,7 +681,9 @@ ul.tabs {
         margin-right: 5.26316%;
         margin-left: 30.52632%; } }
     .discussion .discussion__body blockquote:first-child {
-      margin: 12px 0px 12px 0px; }
+      margin: 12px 24px 12px 24px; }
+    .discussion .discussion__body br {
+      display: none; }
     .discussion .discussion__body p:last-child {
       margin-bottom: 0px; }
   .discussion .discussion__avatar {
@@ -864,7 +866,7 @@ ul.tabs {
     display: none; }
   .discussion.blocked {
     color: #999999;
-    padding: 12px 0px 0px 0px; }
+    padding: 12px 12px 12px 12px; }
     .discussion.blocked .discussion__header {
       opacity: 0.5; }
     .discussion.blocked .discussion__recommend {
